--- a/views/contact.html
+++ b/views/contact.html
@@ -1,3 +1,5 @@
 <h3>Contact Information</h3>
-<p><a href="mailto:developingdane@gmail.com">developingdane@gmail.com</a></p>
 <p>Feel free to concact me if you have questions about, suggestions for or corrections to the information presented here.</p>
+<p><a href="mailto:developingdane@gmail.com">developingdane@gmail.com</a></p>
+<P><a href="https://twitter.com/DevelopingDane">@DevelopingDane</a></P>
+<P><a href="http://developingdane.blogspot.com/">Developing Dane (blog)</a></P>
