Edited the "why" text

--- a/views/why.html
+++ b/views/why.html
@@ -1,6 +1,6 @@
 <h3>Whys and Wherefores</h3>
 <p>
-On several occasions I’ve had issues with the naming of my Azure resources. The most annoying of these issues was when I’d created a resource for prototyping in one subscription, deleted it and then attempted to recreate it with the same name under a different subscription only to discover that the name had been “reserved” for some period of time under the initial subscription. After I was bitten by this issue a couple times I went in search of documentation for the timings for such name reservations but came up wanting. A post to the MSDN forums confirmed that no such documentation exists so I decided to create it myself. 
+On several occasions I’ve had issues with the naming of my Azure resources. The most annoying of these was when I’d created a resource for prototyping in one subscription, deleted it and then attempted to recreate it with the same name under a different subscription only to discover that the name had been “reserved” for some period of time under the initial subscription. After I was bitten by this issue a couple times I went in search of documentation for the timings of such name reservations but came up wanting. A post to the MSDN forums confirmed that no such documentation exists so I decided to create it myself. 
 </p>
 <p>
 This site represents the ongoing results of this attempt.
