--- a/views/contact.html
+++ b/views/contact.html
@@ -3,4 +3,4 @@
 <br/>
 <p>Email: <a href="mailto:developingdane@gmail.com">developingdane@gmail.com</a></p>
 <P>Twitter: <a href="https://twitter.com/DevelopingDane">@DevelopingDane</a></P>
-<P>Blog: <a href="http://developingdane.blogspot.com/">Developing Dane</a></P>
+<P>Blog: <a href="https://developingdane.com/">Developing Dane</a></P>
